View Issue Details

IDProjectCategoryView StatusLast Update
0023864Open CASCADEOCCT:Application Frameworkpublic2013-12-19 13:56
Reportervro Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.5.3 
Target Version6.7.0Fixed in Version6.7.0 
Summary0023864: An & symbol is read incorrectly from a XML Ocaf file
DescriptionIf an Ocaf XML document contains an & symbol, it is read incorrectly (the char is not initilized and any symbol is put instead of &). Such a document is attached.
Steps To Reproduce#Open an Ocaf XML document
Open testAmp.xml D
#Get name attribute (containing an & symbol)
GetName D 0:1
#Get an array of strings (containing an & symbol)
GetExtStringArray D 0:1
TagsNo tags attached.
Test case numberbugs caf(015) bug170_3, bug23864

Attached Files

  • testAmp.xml (1,291 bytes)

Activities

vro

2013-03-27 15:07

developer  

testAmp.xml (1,291 bytes)

vro

2013-03-27 15:13

developer   ~0023905

Dear Agv, could you review my changes, please? I uncommented a line in LDOM_CharReference.cxx. This line initializes a read symbol "&".

abv

2013-08-14 15:56

manager   ~0025307

Halloo Alexander! Could you please code-review this one-line fix? Thank you in advance!

mkv

2013-08-15 15:14

tester   ~0025321

Dear BugMaster,

Branch CR23864 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: bfa011220e052ef06e2ae48de73bc6b8518a5c29

Number of compiler warnings:

occt component :
Linux: 916 (917 on master)
Windows: 855 (855 on master)

products component :
Linux: 188 (188 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
http://occt-tests/CR23864-master-occt/Debian60-64/bugs/caf/bug170_3.html
http://occt-tests/CR23864-master-occt/Windows-32-VC9/bugs/caf/bug170_3.html
bugs caf(015) bug170_3

Testing cases:
bugs caf(015) bug170_3, bug23864 - OK.

Testing on Linux:
Total MEMORY difference: 363526544 / 363259532
Total CPU difference: 45619.84000000081 / 49185.5800000005

Testing on Windows:
Total MEMORY difference: 424313804 / 423619644
Total CPU difference: 35062.9375 / 32898.265625

There are not differences in images found by testdiff.

Related Changesets

occt: master 80cd454f

2013-08-15 12:28:11

vro


Committer: bugmaster Details Diff
0023864: An & symbol is read incorrectly from a XML Ocaf file
A line is uncommented. This line sets the successfully read & symbol.
Correction and adding test cases for issue CR23864
Affected Issues
0023864
mod - src/LDOM/LDOM_CharReference.cxx Diff File
mod - tests/bugs/caf/bug170_3 Diff File
add - tests/bugs/caf/bug23864 Diff File

Issue History

Date Modified Username Field Change
2013-03-27 15:07 vro New Issue
2013-03-27 15:07 vro Assigned To => vro
2013-03-27 15:07 vro File Added: testAmp.xml
2013-03-27 15:13 vro Note Added: 0023905
2013-03-27 15:13 vro Assigned To vro => agv
2013-03-27 15:13 vro Status new => resolved
2013-08-14 15:56 abv Note Added: 0025307
2013-08-14 19:40 agv Status resolved => reviewed
2013-08-15 09:03 mkv Assigned To agv => mkv
2013-08-15 10:43 abv Target Version Unscheduled => 6.7.0
2013-08-15 15:14 mkv Note Added: 0025321
2013-08-15 15:14 mkv Test case number => bugs caf(015) bug170_3, bug23864
2013-08-15 15:14 mkv Assigned To mkv => bugmaster
2013-08-15 15:14 mkv Status reviewed => tested
2013-08-17 12:50 bugmaster Changeset attached => occt master 80cd454f
2013-08-17 12:50 bugmaster Status tested => verified
2013-08-17 12:50 bugmaster Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:56 bugmaster Fixed in Version => 6.7.0