0023864: An & symbol is read incorrectly from a XML Ocaf file A line is uncommented. This line sets the successfully read & symbol. Correction and adding test cases for issue CR23864